0.1687
    - added EXPERIMENTAL type_rule method
0.1686
    - select() column option can receive array reference in array.
      This is EXPERIMENTAL
    - select() EXPERIMETNAL column option hash format
      return table.column, not table__column
    - added EXPERIMENTAL col method.
    - set reserved_word_quote automatically from driver name
0.1685
    - insert_at, update_at, delete_at, select_at is DEPRECATED!
      use insert, update, delete, select method and id option.
    - insert, insert_at, update, update_at can receive odd number arguments,
      first one is parameter.
0.1684
    - added DBIx::Custom::Result all method, this is alias for fetch_hash_all
    - added DBIx::Custom::Result one method, this is alias for fetch_hash_first
    - DBIx::Custom::Result fetch_hash_first can recieve argument
    - select() column option can receive hash reference. This is EXPERIMENTAL
    - update_param_tag is DEPRECATED! use update_param instead.
    - insert_param_tag is DEPRECATED! use insert_param instead.
    - assing_param_tag is DEPRECATED! use assign_param instead.
    - Tag system such as {? title}, {= title} is DEPRECATED!
      and added paramter system such as :title.
0.1683
    - data_source is DEPRECATED! It is renamed to dsn
0.1682
    - improved debug message
    - fixed merge_param bug
0.1681
    - added EXPERIMENTAL assign_tag() method
0.1680
    - DEPRECATED select() param option, this is renamed to where_param
    - added select(), update(), and delete() where_param option
0.1679
    - added EXPERIMENTAL select() wrap option to support Oracle ROWNUM
0.1678
    - DBIx::Custom::Model filter attribute can receive hash reference
    - DBIx::Custom::Where clause attribute can receive clause without column name
    - improved error messages
0.1677
    - improved table search in column and join clause
    - DEPRECATED table tag. use table option.
0.1676
    - fixed test bug
0.1675
    - removed DEPRECATED DBIx::Custom::MySQL and DBIx::Custom::SQLite